Refactor and restructure work dir handling
Added new image resources and replaced WorkDirHandler with WorkDirSQL. Updated related classes and methods to reflect these changes, ensuring proper initialization and handling of work directories.